--- a/templates/_index.html
+++ b/templates/_index.html
@@ -12,9 +12,65 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
         <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.css">
-    
-        <link rel="stylesheet" href="bower_components/reveal.js/css/theme/moon.css" id="theme">
-    
+
+        <link rel="stylesheet" href="resources/ionic.css" id="theme">
+        <style>
+        /*********************************************
+		 * NAVIGATION CONTROLS
+		 *********************************************/
+		.reveal .controls div.navigate-left,
+		.reveal .controls div.navigate-left.enabled {
+		  border-right-color: #F03636;
+		}
+
+		.reveal .controls div.navigate-right,
+		.reveal .controls div.navigate-right.enabled {
+		  border-left-color:  #fff !important;
+		 }
+
+		.reveal .controls div.navigate-up,
+		.reveal .controls div.navigate-up.enabled {
+		  border-bottom-color:  #fff !important; }
+
+		.reveal .controls div.navigate-down,
+		.reveal .controls div.navigate-down.enabled {
+		  border-top-color:  #fff !important; }
+
+		.reveal .controls div.navigate-left.enabled:hover {
+		  border-right-color: #ddd !important; }
+
+		.reveal .controls div.navigate-right.enabled:hover {
+		  border-left-color: #ddd !important; }
+
+		.reveal .controls div.navigate-up.enabled:hover {
+		  border-bottom-color: #ddd !important; }
+
+		.reveal .controls div.navigate-down.enabled:hover {
+		  border-top-color: #ddd !important; }
+
+		/*********************************************
+		 * PROGRESS BAR
+		 *********************************************/
+		.reveal .progress {
+		  background: rgba(0, 0, 0, 0.2); }
+
+		.reveal .progress span {
+		  background: #fff;
+		  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+		  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+		  -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+		  -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+		  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+		}
+
+        img {
+            border: none !important;
+            background: none !important;
+            box-shadow: none !important;
+        }
+
+        </style>
+
 
         <!-- For syntax highlighting -->
         <link rel="stylesheet" href="bower_components/highlightjs/styles/zenburn.css">
