Adding more slides

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -69,6 +69,58 @@
             box-shadow: none !important;
         }
 
+        .slides div, .slides h2 {
+			margin-bottom: 20px;
+        }
+
+        .slides div, .slides h2,
+        .slides p {
+        }
+
+		.reveal p {
+			margin-bottom: 10px;
+			line-height: 1.2em;
+		}
+
+        .slides img {
+          border: 0 !important;
+          box-shadow: none !important;
+        }
+
+        img.profile {
+          border-radius: 8px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.95) !important;
+		  width: 200px;
+    	  height: 200px;
+        }
+        .col-25 {
+          width: 25%;
+          vertical-align: top;
+          text-align: left;
+          float: left;
+        }
+        .col-75 {
+          width: 72%;
+          vertical-align: top;
+          text-align: left;
+          float: left;
+        }
+
+        .tag {
+          background: #2D5EB9;
+          color: #fff;
+          padding: 0 4px !important;
+          display: inline-block;
+        }
+
+		.call-title {
+          background: #2453A2;
+		  display: inline-block;
+          padding: 0 4px !important;
+		  margin: 4px;
+		  font-size: 46px !important;
+		}
+
         </style>
 
 
