--- a/templates/_index.html
+++ b/templates/_index.html
@@ -121,6 +121,24 @@
 		  font-size: 46px !important;
 		}
 
+		a.link {
+			color: #000 !important;
+			text-decoration: underline !important;
+		}
+
+		a.link:hover {
+			color: #ccc !important;
+			text-decoration: underline !important;
+		}
+
+		.hide {
+			display: none;
+		}
+
+		.reveal .stack {
+			background: #4D84E0;
+		}
+
         </style>
 
 
