Adding more slides

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -139,6 +139,15 @@
 			background: #4D84E0;
 		}
 
+        .reveal code {
+            font-family: monospace;
+            text-align: left;
+        }
+
+        .text-left {
+            text-align: left !important;
+        }
+
         </style>
 
 
