Adding info about hybrid

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -142,10 +142,19 @@
         .reveal code {
             font-family: monospace;
             text-align: left;
+            font-size: 32px;
+        }
+
+        .reveal pre {
+            margin: 10px;
         }
 
         .text-left {
             text-align: left !important;
+        }
+
+        .table td, .table th {
+            border-bottom: 1px solid #fff;
         }
 
         </style>
