--- a/templates/_index.html
+++ b/templates/_index.html
@@ -149,6 +149,10 @@
             margin: 10px;
         }
 
+        .capture {
+            width: 100%;
+        }
+
         .text-left {
             text-align: left !important;
         }
